--- a/shopping-cart_practice_1/package.json
+++ b/shopping-cart_practice_1/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.12.22",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-swipeable": "^7.0.1",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
